wording: Use "adresse e-mail" instead of "courriel"

--- a/themes/inclusion-connect/login/messages/messages_fr.properties
+++ b/themes/inclusion-connect/login/messages/messages_fr.properties
@@ -31,7 +31,7 @@ oauthGrantTitle=OAuth Grant
 oauthGrantTitleHtml={0}
 errorTitle=Nous sommes d\u00e9sol\u00e9s...
 errorTitleHtml=Nous sommes <strong>d\u00e9sol\u00e9s</strong>...
-emailVerifyTitle=V\u00e9rification du courriel
+emailVerifyTitle=V\u00e9rification de l''adresse e-mail
 emailForgotTitle=Mot de passe oubli\u00e9 ?
 updatePasswordTitle=Mise \u00e0 jour du mot de passe
 codeSuccessTitle=Code succ\u00e8s
@@ -53,13 +53,13 @@ consentDenied=Consentement refus\u00e9.
 
 noAccount=Nouvel utilisateur ?
 username=Nom d''utilisateur
-usernameOrEmail=Nom d''utilisateur ou courriel
+usernameOrEmail=Nom d''utilisateur ou adresse e-mail
 firstName=Pr\u00e9nom
 givenName=Pr\u00e9nom
 fullName=Nom complet
 lastName=Nom
 familyName=Nom de famille
-email=Courriel
+email=Adresse e-mail
 password=Mot de passe
 passwordConfirm=Confirmation du mot de passe
 passwordNew=Nouveau mot de passe
@@ -72,7 +72,7 @@ locality=Ville ou Localit\u00e9
 region=\u00c9tat, Province ou R\u00e9gion
 postal_code=Code postal
 country=Pays
-emailVerified=Courriel v\u00e9rifi\u00e9
+emailVerified=Adresse e-mail v\u00e9rifi\u00e9
 gssDelegationCredential=Accr\u00e9ditation de d\u00e9l\u00e9gation GSS
 
 loginTotpIntro=Il est n\u00e9cessaire de configurer un g\u00e9n\u00e9rateur One Time Password pour acc\u00e9der \u00e0 ce compte
@@ -146,7 +146,7 @@ client_realm-management=Gestion du domaine
 client_broker=Broker
 
 invalidUserMessage=Nom d''utilisateur ou mot de passe invalide.
-invalidEmailMessage=Courriel invalide.
+invalidEmailMessage=Adresse e-mail invalide.
 accountDisabledMessage=Compte d\u00e9sactiv\u00e9, contactez votre administrateur.
 accountTemporarilyDisabledMessage=Ce compte est temporairement d\u00e9sactiv\u00e9, contactez votre administrateur ou bien r\u00e9essayez plus tard.
 expiredCodeMessage=Connexion expir\u00e9e. Veuillez vous reconnecter.
@@ -156,7 +156,7 @@ expiredActionTokenSessionExistsMessage=Action expir\u00e9e. Merci de recommencer
 
 missingFirstNameMessage=Veuillez entrer votre pr\u00e9nom.
 missingLastNameMessage=Veuillez entrer votre nom.
-missingEmailMessage=Veuillez entrer votre courriel.
+missingEmailMessage=Veuillez entrer votre adresse e-mail.
 missingUsernameMessage=Veuillez entrer votre nom d''utilisateur.
 missingPasswordMessage=Veuillez entrer votre mot de passe.
 missingTotpMessage=Veuillez entrer votre code d''authentification.
@@ -168,10 +168,10 @@ invalidPasswordConfirmMessage=Le mot de passe de confirmation ne correspond pas.
 invalidTotpMessage=Le code d''authentification est invalide.
 
 usernameExistsMessage=Le nom d''utilisateur existe d\u00e9j\u00e0.
-emailExistsMessage=Le courriel existe d\u00e9j\u00e0.
+emailExistsMessage=L''adresse e-mail existe d\u00e9j\u00e0.
 
 federatedIdentityExistsMessage=L''utilisateur avec {0} {1} existe d\u00e9j\u00e0. Veuillez acc\u00e9der \u00e0 au gestionnaire de compte pour lier le compte.
-federatedIdentityEmailExistsMessage=Cet utilisateur avec ce courriel existe d\u00e9j\u00e0. Veuillez vous connecter au gestionnaire de compte pour lier le compte.
+federatedIdentityEmailExistsMessage=Cet utilisateur avec cette adresse e-mail existe d\u00e9j\u00e0. Veuillez vous connecter au gestionnaire de compte pour lier le compte.
 
 confirmLinkIdpTitle=Ce compte existe d\u00e9j\u00e0
 federatedIdentityConfirmLinkMessage=L''utilisateur {0} {1} existe d\u00e9j\u00e0. Que souhaitez-vous faire ?
@@ -183,8 +183,8 @@ configureTotpMessage=Vous devez configurer l''authentification par mobile pour a
 updateProfileMessage=Vous devez mettre \u00e0 jour votre profil pour activer votre compte.
 updatePasswordMessage=Vous devez changer votre mot de passe pour activer votre compte.
 resetPasswordMessage=Vous devez changer votre mot de passe.
-verifyEmailMessage=Vous devez v\u00e9rifier votre courriel pour activer votre compte.
-linkIdpMessage=Vous devez v\u00e9rifier votre courriel pour lier votre compte avec {0}.
+verifyEmailMessage=Vous devez v\u00e9rifier votre adresse e-mail pour activer votre compte.
+linkIdpMessage=Vous devez v\u00e9rifier votre adresse e-mail pour lier votre compte avec {0}.
 
 emailSentMessage=Vous devriez recevoir rapidement un courriel avec de plus amples instructions.
 emailSendErrorMessage=Erreur lors de l''envoi du courriel, veuillez essayer plus tard.
@@ -239,7 +239,7 @@ identityProviderLinkSuccess=Votre compte a \u00e9t\u00e9 correctement li\u00e9 a
 staleCodeMessage=Cette page n''est plus valide, merci de retourner \u00e0 votre application et de vous connecter \u00e0 nouveau.
 realmSupportsNoCredentialsMessage=Ce domaine ne supporte aucun type d''accr\u00e9ditation.
 identityProviderNotUniqueMessage=Ce domaine autorise plusieurs fournisseurs d''identit\u00e9. Impossible de d\u00e9terminer le fournisseur d''identit\u00e9 avec lequel s''authentifier.
-emailVerifiedMessage=Votre courriel a \u00e9t\u00e9 v\u00e9rifi\u00e9.
+emailVerifiedMessage=Votre adresse e-mail a \u00e9t\u00e9 v\u00e9rifi\u00e9.
 
 staleEmailVerificationLink=Le lien que vous avez cliqu\u00e9 est p\u00e9rim\u00e9 et n''est plus valide. Peut-\u00eatre avez vous d\u00e9j\u00e0 v\u00e9rifi\u00e9 votre mot de passe ?
 identityProviderAlreadyLinkedMessage=L''identit\u00e9 f\u00e9d\u00e9r\u00e9e retourn\u00e9e par {0} est d\u00e9j\u00e0 li\u00e9e \u00e0 un autre utilisateur.
