wording: Improve incorrect user message

--- a/themes/inclusion-connect/login/messages/messages_fr.properties
+++ b/themes/inclusion-connect/login/messages/messages_fr.properties
@@ -145,7 +145,7 @@ client_admin-cli=Admin CLI
 client_realm-management=Gestion du domaine
 client_broker=Broker
 
-invalidUserMessage=Nom d''utilisateur ou mot de passe invalide.
+invalidUserMessage=<p>Adresse e-mail ou mot de passe invalide.<br>Si vous n''avez pas encore activ\u00e9 votre compte Inclusion Connect, RDV en bas de page pour cr\u00e9er votre compte.</p>
 invalidEmailMessage=Adresse e-mail invalide.
 accountDisabledMessage=Compte d\u00e9sactiv\u00e9, contactez votre administrateur.
 accountTemporarilyDisabledMessage=Ce compte est temporairement d\u00e9sactiv\u00e9, contactez votre administrateur ou bien r\u00e9essayez plus tard.
