email: Add greeting and closing

--- a/themes/inclusion-connect/email/messages/messages_fr.properties
+++ b/themes/inclusion-connect/email/messages/messages_fr.properties
@@ -19,3 +19,8 @@ eventUpdatePasswordBodyHtml=<p>Votre mot de passe pour votre compte {0} a \u00e9
 eventUpdateTotpSubject=Mise \u00e0 jour du OTP
 eventUpdateTotpBody=Le OTP a \u00e9t\u00e9 mis \u00e0 jour pour votre compte {0} depuis {1}. Si vous n''\u00e9tiez pas \u00e0 l''origine de cette requ\u00eate, veuillez contacter votre administrateur.
 eventUpdateTotpBodyHtml=<p>Le OTP a \u00e9t\u00e9 mis \u00e0 jour pour votre compte {0} depuis {1}. Si vous n''\u00e9tiez pas \u00e0 l''origine de cette requ\u00eate, veuillez contacter votre administrateur.</p>
+
+greeting=Bonjour,\n\n
+greetingHtml=<p>Bonjour,</p>
+closing=L''\u00e9quipe d''inclusion connect
+closingHtml=<p>L''\u00e9quipe d''inclusion connect</p>
