--- a/themes/inclusion-connect/login/messages/messages_fr.properties
+++ b/themes/inclusion-connect/login/messages/messages_fr.properties
@@ -187,7 +187,7 @@ verifyEmailMessage=Vous devez v\u00e9rifier votre adresse e-mail pour activer vo
 linkIdpMessage=Vous devez v\u00e9rifier votre adresse e-mail pour lier votre compte avec {0}.
 
 emailSentMessage=Vous devriez recevoir rapidement un courriel avec de plus amples instructions.
-emailSendErrorMessage=Erreur lors de l''envoi du courriel, veuillez essayer plus tard.
+emailSendErrorMessage=<p style="color:red;">Erreur lors de l''envoi du courriel, veuillez essayer plus tard.</p>
 
 accountUpdatedMessage=Votre compte a \u00e9t\u00e9 mis \u00e0 jour.
 accountPasswordUpdatedMessage=Votre mot de passe a \u00e9t\u00e9 mis \u00e0 jour.
