--- a/themes/inclusion-connect/login/messages/messages_fr.properties
+++ b/themes/inclusion-connect/login/messages/messages_fr.properties
@@ -244,7 +244,7 @@ emailVerifiedMessage=Votre adresse e-mail a \u00e9t\u00e9 v\u00e9rifi\u00e9.
 staleEmailVerificationLink=Le lien que vous avez cliqu\u00e9 est p\u00e9rim\u00e9 et n''est plus valide. Peut-\u00eatre avez vous d\u00e9j\u00e0 v\u00e9rifi\u00e9 votre mot de passe ?
 identityProviderAlreadyLinkedMessage=L''identit\u00e9 f\u00e9d\u00e9r\u00e9e retourn\u00e9e par {0} est d\u00e9j\u00e0 li\u00e9e \u00e0 un autre utilisateur.
 confirmAccountLinking=Confirmez la liaison du compte {0} du fournisseur d''entit\u00e9 {1} avec votre compte.
-confirmEmailAddressVerification=Confirmez la validit\u00e9 de l''adresse courriel {0}.
+confirmEmailAddressVerification=Confirmez la validit\u00e9 de l''adresse e-mail {0}.
 confirmExecutionOfActions=Suivez les instructions suivantes
 
 
@@ -263,7 +263,7 @@ requiredAction.CONFIGURE_TOTP=Configurer OTP
 requiredAction.terms_and_conditions=Termes et conditions
 requiredAction.UPDATE_PASSWORD=Mettre \u00e0 jour votre mot de passe
 requiredAction.UPDATE_PROFILE=Mettre \u00e0 jour votre profil
-requiredAction.VERIFY_EMAIL=Valider votre courriel
+requiredAction.VERIFY_EMAIL=Valider votre adresse e-mail
 
 
 doX509Login=Vous allez \u00eatre connect\u00e9 en tant que\:
