themes: Use utf-8 encoding

--- a/themes/inclusion-connect/email/messages/messages_fr.properties
+++ b/themes/inclusion-connect/email/messages/messages_fr.properties
@@ -1,26 +1,27 @@
-emailVerificationSubject=V\u00e9rification de l''adresse e-mail
-emailVerificationBody=Une demande de cr\u00e9ation de compte a \u00e9t\u00e9 effectu\u00e9e avec votre adresse e-mail. Si vous \u00eates \u00e0 l''origine de cette requ\u00eate, veuillez cliquer sur le lien ci-dessous afin de v\u00e9rifier votre adresse e-mail \n\n{0}\n\nCe lien expire dans {1} minutes.\n\nSinon, veuillez ignorer ce message.
-emailVerificationBodyHtml=<p>Une demande de cr\u00e9ation de compte a \u00e9t\u00e9 effectu\u00e9e avec votre adresse e-mail. Si vous \u00eates \u00e0 l''origine de cette requ\u00eate, veuillez cliquer sur le lien ci-dessous afin de v\u00e9rifier votre adresse emai</p><p><a href="{0}">Lien pour v\u00e9rifier votre adresse e-mail</a></p><p>Ce lien expire dans {1} minutes.</p><p>Sinon, veuillez ignorer ce message.</p>
-passwordResetSubject=R\u00e9initialiser le mot de passe
-passwordResetBody=Une demande de r\u00e9initialisation de mot de passe a \u00e9t\u00e9 effectu\u00e9e pour votre compte. Si vous \u00eates \u00e0 l''origine de cette requ\u00eate, veuillez cliquer sur le lien ci-dessous pour le mettre \u00e0 jour.\n\n{0}\n\nCe lien expire dans {1} minutes.\n\nSinon, veuillez ignorer ce message ; aucun changement ne sera effectu\u00e9 sur votre compte.
-passwordResetBodyHtml=<p>Une demande de r\u00e9initialisation de mot de passe a \u00e9t\u00e9 effectu\u00e9e pour votre compte. Si vous \u00eates \u00e0 l''origine de cette requ\u00eate, veuillez cliquer sur le lien ci-dessous pour le mettre \u00e0 jour.</p><p><a href="{0}">Lien pour r\u00e9initialiser votre mot de passe</a></p><p>Ce lien expire dans {1} minutes.</p><p>Sinon, veuillez ignorer ce message ; aucun changement ne sera effectu\u00e9 sur votre compte.</p>
-executeActionsSubject=Mettre \u00e0 jour votre compte
-executeActionsBody=Votre administrateur vient de demander une mise \u00e0 jour de votre compte. Veuillez cliquer sur le lien ci-dessous afin de commencer le processus.\n\n{0}\n\nCe lien expire dans {1} minutes.\n\nSi vous n''\u00eates pas \u00e0 l''origine de cette requ\u00eate, veuillez ignorer ce message ; aucun changement ne sera effectu\u00e9 sur votre compte.
-executeActionsBodyHtml=<p>Votre administrateur vient de demander une mise \u00e0 jour de votre compte. Veuillez cliquer sur le lien ci-dessous afin de commencer le processus.</p><p><a href="{0}">{0}</a></p><p>Ce lien expire dans {1} minutes.</p><p>Si vous n''\u00eates pas \u00e0 l''origine de cette requ\u00eate, veuillez ignorer ce message ; aucun changement ne sera effectu\u00e9 sur votre compte.</p>
+# encoding: UTF-8
+emailVerificationSubject=Vérification de l''adresse e-mail
+emailVerificationBody=Une demande de création de compte a été effectuée avec votre adresse e-mail. Si vous êtes à l''origine de cette requête, veuillez cliquer sur le lien ci-dessous afin de vérifier votre adresse e-mail \n\n{0}\n\nCe lien expire dans {1} minutes.\n\nSinon, veuillez ignorer ce message.
+emailVerificationBodyHtml=<p>Une demande de création de compte a été effectuée avec votre adresse e-mail. Si vous êtes à l''origine de cette requête, veuillez cliquer sur le lien ci-dessous afin de vérifier votre adresse emai</p><p><a href="{0}">Lien pour vérifier votre adresse e-mail</a></p><p>Ce lien expire dans {1} minutes.</p><p>Sinon, veuillez ignorer ce message.</p>
+passwordResetSubject=Réinitialiser le mot de passe
+passwordResetBody=Une demande de réinitialisation de mot de passe a été effectuée pour votre compte. Si vous êtes à l''origine de cette requête, veuillez cliquer sur le lien ci-dessous pour le mettre à jour.\n\n{0}\n\nCe lien expire dans {1} minutes.\n\nSinon, veuillez ignorer ce message ; aucun changement ne sera effectué sur votre compte.
+passwordResetBodyHtml=<p>Une demande de réinitialisation de mot de passe a été effectuée pour votre compte. Si vous êtes à l''origine de cette requête, veuillez cliquer sur le lien ci-dessous pour le mettre à jour.</p><p><a href="{0}">Lien pour réinitialiser votre mot de passe</a></p><p>Ce lien expire dans {1} minutes.</p><p>Sinon, veuillez ignorer ce message ; aucun changement ne sera effectué sur votre compte.</p>
+executeActionsSubject=Mettre à jour votre compte
+executeActionsBody=Votre administrateur vient de demander une mise à jour de votre compte. Veuillez cliquer sur le lien ci-dessous afin de commencer le processus.\n\n{0}\n\nCe lien expire dans {1} minutes.\n\nSi vous n''êtes pas à l''origine de cette requête, veuillez ignorer ce message ; aucun changement ne sera effectué sur votre compte.
+executeActionsBodyHtml=<p>Votre administrateur vient de demander une mise à jour de votre compte. Veuillez cliquer sur le lien ci-dessous afin de commencer le processus.</p><p><a href="{0}">{0}</a></p><p>Ce lien expire dans {1} minutes.</p><p>Si vous n''êtes pas à l''origine de cette requête, veuillez ignorer ce message ; aucun changement ne sera effectué sur votre compte.</p>
 eventLoginErrorSubject=Erreur de connexion
-eventLoginErrorBody=Une tentative de connexion a \u00e9t\u00e9 d\u00e9tect\u00e9e sur votre compte depuis {1}. Si vous n''\u00eates pas \u00e0 l''origine de cette requ\u00eate, veuillez contacter votre administrateur.
-eventLoginErrorBodyHtml=<p>Une tentative de connexion a \u00e9t\u00e9 d\u00e9tect\u00e9e sur votre compte depuis {1}. Si vous n''\u00eates pas \u00e0 l''origine de cette requ\u00eate, veuillez contacter votre administrateur.</p>
+eventLoginErrorBody=Une tentative de connexion a été détectée sur votre compte depuis {1}. Si vous n''êtes pas à l''origine de cette requête, veuillez contacter votre administrateur.
+eventLoginErrorBodyHtml=<p>Une tentative de connexion a été détectée sur votre compte depuis {1}. Si vous n''êtes pas à l''origine de cette requête, veuillez contacter votre administrateur.</p>
 eventRemoveTotpSubject=Suppression du OTP
-eventRemoveTotpBody=Le OTP a \u00e9t\u00e9 supprim\u00e9 de votre compte depuis {1}. Si vous n''\u00e9tiez pas \u00e0 l''origine de cette requ\u00eate, veuillez contacter votre administrateur.
-eventRemoveTotpBodyHtml=<p>Le OTP a \u00e9t\u00e9 supprim\u00e9 de votre compte depuis {1}. Si vous n''\u00e9tiez pas \u00e0 l''origine de cette requ\u00eate, veuillez contacter votre administrateur.</p>
-eventUpdatePasswordSubject=Mise \u00e0 jour du mot de passe
-eventUpdatePasswordBody=Votre mot de passe pour votre compte a \u00e9t\u00e9 modifi\u00e9 depuis {1}. Si vous n''\u00e9tiez pas \u00e0 l''origine de cette requ\u00eate, veuillez contacter votre administrateur.
-eventUpdatePasswordBodyHtml=<p>Votre mot de passe pour votre compte a \u00e9t\u00e9 modifi\u00e9 depuis {1}. Si vous n''\u00e9tiez pas \u00e0 l''origine de cette requ\u00eate, veuillez contacter votre administrateur.</p>
-eventUpdateTotpSubject=Mise \u00e0 jour du OTP
-eventUpdateTotpBody=Le OTP a \u00e9t\u00e9 mis \u00e0 jour pour votre compte depuis {1}. Si vous n''\u00e9tiez pas \u00e0 l''origine de cette requ\u00eate, veuillez contacter votre administrateur.
-eventUpdateTotpBodyHtml=<p>Le OTP a \u00e9t\u00e9 mis \u00e0 jour pour votre compte depuis {1}. Si vous n''\u00e9tiez pas \u00e0 l''origine de cette requ\u00eate, veuillez contacter votre administrateur.</p>
+eventRemoveTotpBody=Le OTP a été supprimé de votre compte depuis {1}. Si vous n''étiez pas à l''origine de cette requête, veuillez contacter votre administrateur.
+eventRemoveTotpBodyHtml=<p>Le OTP a été supprimé de votre compte depuis {1}. Si vous n''étiez pas à l''origine de cette requête, veuillez contacter votre administrateur.</p>
+eventUpdatePasswordSubject=Mise à jour du mot de passe
+eventUpdatePasswordBody=Votre mot de passe pour votre compte a été modifié depuis {1}. Si vous n''étiez pas à l''origine de cette requête, veuillez contacter votre administrateur.
+eventUpdatePasswordBodyHtml=<p>Votre mot de passe pour votre compte a été modifié depuis {1}. Si vous n''étiez pas à l''origine de cette requête, veuillez contacter votre administrateur.</p>
+eventUpdateTotpSubject=Mise à jour du OTP
+eventUpdateTotpBody=Le OTP a été mis à jour pour votre compte depuis {1}. Si vous n''étiez pas à l''origine de cette requête, veuillez contacter votre administrateur.
+eventUpdateTotpBodyHtml=<p>Le OTP a été mis à jour pour votre compte depuis {1}. Si vous n''étiez pas à l''origine de cette requête, veuillez contacter votre administrateur.</p>
 
 greeting=Bonjour,\n\n
 greetingHtml=<p>Bonjour,</p>
-closing=L''\u00e9quipe d''inclusion connect
-closingHtml=<p>L''\u00e9quipe d''inclusion connect</p>
+closing=L''équipe d''inclusion connect
+closingHtml=<p>L''équipe d''inclusion connect</p>
