themes: Fix typo

--- a/themes/inclusion-connect/login/messages/messages_fr.properties
+++ b/themes/inclusion-connect/login/messages/messages_fr.properties
@@ -240,7 +240,7 @@ identityProviderLinkSuccess=Votre compte a été correctement lié avec {0} comp
 staleCodeMessage=Cette page n''est plus valide, merci de retourner à votre application et de vous connecter à nouveau.
 realmSupportsNoCredentialsMessage=Ce domaine ne supporte aucun type d''accréditation.
 identityProviderNotUniqueMessage=Ce domaine autorise plusieurs fournisseurs d''identité. Impossible de déterminer le fournisseur d''identité avec lequel s''authentifier.
-emailVerifiedMessage=Votre adresse e-mail a été vérifié.
+emailVerifiedMessage=Votre adresse e-mail a été vérifiée.
 
 staleEmailVerificationLink=Le lien que vous avez cliqué est périmé et n''est plus valide. Peut-être avez vous déjà vérifié votre mot de passe ?
 identityProviderAlreadyLinkedMessage=L''identité fédérée retournée par {0} est déjà liée à un autre utilisateur.
