themes: Improve confirmation email helper

--- a/themes/inclusion-connect/login/messages/messages_fr.properties
+++ b/themes/inclusion-connect/login/messages/messages_fr.properties
@@ -98,7 +98,7 @@ oauthGrantRequest=Voulez-vous accorder ces privilèges d''accès ?
 inResource=dans
 
 emailVerifyInstruction1=Un courriel avec des instructions à suivre vous a été envoyé.
-emailVerifyInstruction2=Vous n''avez pas reçu de code dans le courriel ?
+emailVerifyInstruction2=Vous n''avez pas reçu de courriel pour activer votre compte ?
 emailVerifyInstruction3=pour renvoyer le courriel.
 
 emailLinkIdpTitle=Association avec {0}
