feat: templates redesign

--- a/themes/inclusion-connect/login/messages/messages_fr.properties
+++ b/themes/inclusion-connect/login/messages/messages_fr.properties
@@ -1,6 +1,6 @@
 # encoding: UTF-8
-doLogIn=Se connecter
-doRegister=Créer un compte
+doLogIn=Connexion
+doRegister=Activer mon compte
 doCancel=Annuler
 doSubmit=Soumettre
 doBack=Retour
@@ -158,7 +158,7 @@ emailLinkIdp3=pour renvoyer le courriel.
 emailLinkIdp4=Si vous avez déjà vérifié votre courriel dans un autre navigateur
 emailLinkIdp5=pour continuer.
 
-backToLogin=&laquo; Retour à la connexion
+backToLogin=Retour à la connexion
 
 emailInstruction=Entrez votre nom d''utilisateur ou votre courriel ; un courriel va vous être envoyé vous permettant de créer un nouveau mot de passe.
 emailInstructionUsername=Entrez votre nom d''utilisateur ; un courriel va vous être envoyé vous permettant de créer un nouveau mot de passe.
@@ -341,7 +341,7 @@ confirmEmailAddressVerification=Confirmez la validité de l''adresse courriel {0
 confirmExecutionOfActions=Suivez les instructions suivantes
 
 
-backToApplication=&laquo; Revenir à l''application
+backToApplication=Revenir à l''application
 missingParameterMessage=Paramètres manquants \: {0}
 clientNotFoundMessage=Client inconnu.
 clientDisabledMessage=Client désactivé.
