--- a/themes/inclusion-connect/login/messages/messages_fr.properties
+++ b/themes/inclusion-connect/login/messages/messages_fr.properties
@@ -3,6 +3,7 @@ doLogIn=Se connecter
 doRegister=Créer un compte
 doCancel=Annuler
 doSubmit=Soumettre
+doBack=Retour
 doYes=Oui
 doNo=Non
 doContinue=Continuer
@@ -11,29 +12,45 @@ doAccept=Accepter
 doDecline=Décliner
 doForgotPassword=Mot de passe oublié ?
 doClickHere=Cliquez ici
-doImpersonate=Impersonate
+doImpersonate=Usurper l''identité
+doTryAgain=Réessayer
+doTryAnotherWay=Essayer une autre méthode
+doConfirmDelete=Confirmer la suppression
+errorDeletingAccount=Erreur lors de la suppression du compte
+deletingAccountForbidden=Permissions insuffisantes pour supprimer votre propre compte, contactez un administrateur.
 kerberosNotConfigured=Kerberos non configuré
 kerberosNotConfiguredTitle=Kerberos non configuré
 bypassKerberosDetail=Si vous n''êtes pas connecté via Kerberos ou bien que votre navigateur n''est pas configuré pour la connexion via Kerberos.  Veuillez cliquer pour vous connecter via un autre moyen.
 kerberosNotSetUp=Kerberos n''est pas configuré. Connexion impossible.
 registerTitle=S''enregistrer
+loginAccountTitle=Connectez-vous à votre compte
 registerWithTitle=Enregistrement avec {0}
 registerWithTitleHtml={0}
 loginTitle=Se connecter à {0}
 loginTitleHtml={0}
-impersonateTitle={0} utilisateur impersonate
-impersonateTitleHtml=<strong>{0}</strong> utilisateur impersonate
+impersonateTitle={0} utilisateur usurpé
+impersonateTitleHtml=<strong>{0}</strong> utilisateur usurpé
 realmChoice=Domaine
 unknownUser=Utilisateur inconnu
 loginTotpTitle=Configuration de l''authentification par mobile
 loginProfileTitle=Mise à jour du compte
+loginIdpReviewProfileTitle=Vérifiez vos informations de profil
 loginTimeout=Le temps imparti pour la connexion est écoulé. Le processus de connexion redémarre depuis le début.
 oauthGrantTitle=OAuth Grant
 oauthGrantTitleHtml={0}
+oauthGrantInformation=Assurez-vous de faire confiance à {0} en apprenant comment {0} traitera vos données.
+oauthGrantReview=Vous pourriez examiner
+oauthGrantTos=les conditions générales d''utilisation.
+oauthGrantPolicy=la politique de confidentialité.
 errorTitle=Nous sommes désolés...
 errorTitleHtml=Nous sommes <strong>désolés</strong>...
 emailVerifyTitle=Vérification de l''adresse e-mail
 emailForgotTitle=Mot de passe oublié ?
+updateEmailTitle=Mise à jour de l''adresse e-mail
+emailUpdateConfirmationSentTitle=Courriel de confirmation envoyé
+emailUpdateConfirmationSent=Un courriel de confirmation a été envoyé à {0}. Vous devez suivre les instructions de ce dernier afin de compléter la mise à jour.
+emailUpdatedTitle=Adresse e-mail mise à jour
+emailUpdated=La mise à jour de votre adresse e-mail vers {0} a été complétée avec succès.
 updatePasswordTitle=Mise à jour du mot de passe
 codeSuccessTitle=Code succès
 codeErrorTitle=Code d''erreur \: {0}
@@ -73,29 +90,62 @@ locality=Ville ou Localité
 region=État, Province ou Région
 postal_code=Code postal
 country=Pays
-emailVerified=Adresse e-mail vérifié
+emailVerified=Adresse e-mail vérifiée
+website=Page web
+phoneNumber=Numéro de téléphone
+phoneNumberVerified=Numéro de téléphone vérifié
+gender=Sexe
+birthday=Date de naissance
+zoneinfo=Fuseau horaire
 gssDelegationCredential=Accréditation de délégation GSS
+logoutOtherSessions=Se déconnecter des autres appareils
+
+profileScopeConsentText=Profil utilisateur
+emailScopeConsentText=Adresse e-mail
+addressScopeConsentText=Adresse
+phoneScopeConsentText=Numéro de téléphone
+offlineAccessScopeConsentText=Accès hors-ligne
+samlRoleListScopeConsentText=Mes rôles
+rolesScopeConsentText=Rôles utilisateur
+
+restartLoginTooltip=Redémarrer la connexion
 
 loginTotpIntro=Il est nécessaire de configurer un générateur One Time Password pour accéder à ce compte
-loginTotpStep1=Installez <a href="https://freeotp.github.io/" target="_blank">FreeOTP</a> ou bien Google Authenticator sur votre mobile. Ces deux applications sont disponibles sur <a href="https://play.google.com">Google Play</a> et Apple App Store.
+loginTotpStep1=Installez une des applications suivantes sur votre mobile:
 loginTotpStep2=Ouvrez l''application et scannez le code-barres ou entrez la clef.
 loginTotpStep3=Entrez le code à usage unique fourni par l''application et cliquez sur Sauvegarder pour terminer.
+loginTotpStep3DeviceName=Renseignez un nom d''appareil pour vous aider à gérer vos a appareils OTP.
 loginTotpManualStep2=Ouvrez l''application et saisissez la clé
 loginTotpManualStep3=Utilisez la configuration de valeur suivante si l''application permet son édition
 loginTotpUnableToScan=Impossible de scanner?
 loginTotpScanBarcode=Scanner le code barre ?
+loginCredential=Accréditation
 loginOtpOneTime=Code à usage unique
 loginTotpType=Type
 loginTotpAlgorithm=Algorithme
 loginTotpDigits=Chiffres
 loginTotpInterval=Intervalle
 loginTotpCounter=Compteur
+loginTotpDeviceName=Nom d''appareil
 
 loginTotp.totp=Basé sur le temps
 loginTotp.hotp=Basé sur les compteurs
 
+loginChooseAuthenticator=Sélectionnez une méthode de connexion
+
 oauthGrantRequest=Voulez-vous accorder ces privilèges d''accès ?
 inResource=dans
+
+oauth2DeviceVerificationTitle=Connexion de l''appareil
+verifyOAuth2DeviceUserCode=Entrez le code à usage unique fourni par votre appareil et cliquez sur Soumettre.
+oauth2DeviceInvalidUserCodeMessage=Code invalide, veuillez réessayer.
+oauth2DeviceExpiredUserCodeMessage=Le code a expiré. Veuillez réessayer de vous connecter depuis votre appareil.
+oauth2DeviceVerificationCompleteHeader=Connexion de l''appareil réussie
+oauth2DeviceVerificationCompleteMessage=Vous pouvez fermer cette fenêtre de navigateur et retourner sur votre appareil.
+oauth2DeviceVerificationFailedHeader=Échec de la connexion au dispositif
+oauth2DeviceVerificationFailedMessage=Vous pouvez fermer cette fenêtre de navigateur et retourner sur votre appareil, puis réessayer de vous connecter.
+oauth2DeviceConsentDeniedMessage=Consentement refusé pour connecter l''appareil.
+oauth2DeviceAuthorizationGrantDisabledMessage=Le client n''est pas autorisé à initier OAuth 2.0 Device Authorization Grant. Le flux est désactivé pour ce client.
 
 emailVerifyInstruction1=Un courriel avec des instructions à suivre vous a été envoyé.
 emailVerifyInstruction2=Vous n''avez pas reçu de courriel pour activer votre compte ?
@@ -111,6 +161,7 @@ emailLinkIdp5=pour continuer.
 backToLogin=&laquo; Retour à la connexion
 
 emailInstruction=Entrez votre nom d''utilisateur ou votre courriel ; un courriel va vous être envoyé vous permettant de créer un nouveau mot de passe.
+emailInstructionUsername=Entrez votre nom d''utilisateur ; un courriel va vous être envoyé vous permettant de créer un nouveau mot de passe.
 
 copyCodeInstruction=Copiez le code et recopiez le dans votre application :
 
@@ -141,12 +192,18 @@ role_manage-account-links=Gérer les liens de compte
 role_read-token=Lire le jeton d''authentification
 role_offline-access=Accès hors-ligne
 client_account=Compte
+client_account-console=Console de gestion du compte
 client_security-admin-console=Console d''administration de la sécurité
 client_admin-cli=Admin CLI
 client_realm-management=Gestion du domaine
 client_broker=Broker
 
+requiredFields=Champs requis
+
 invalidUserMessage=<p>Adresse e-mail ou mot de passe invalide.<br>Si vous n''avez pas encore créé votre compte Inclusion Connect, rendez-vous en bas de page et cliquez sur créer un compte.</p>
+invalidUsernameMessage=Nom d''utilisateur invalide.
+invalidUsernameOrEmailMessage=Nom d''utilisateur ou adresse e-mail invalide.
+invalidPasswordMessage=Mot de passe invalide.
 invalidEmailMessage=Adresse e-mail invalide.
 accountDisabledMessage=Compte désactivé, contactez votre administrateur.
 accountTemporarilyDisabledMessage=Ce compte est temporairement désactivé, contactez votre administrateur ou bien réessayez plus tard.
@@ -161,7 +218,29 @@ missingEmailMessage=Veuillez entrer votre adresse e-mail.
 missingUsernameMessage=Veuillez entrer votre nom d''utilisateur.
 missingPasswordMessage=Veuillez entrer votre mot de passe.
 missingTotpMessage=Veuillez entrer votre code d''authentification.
+missingTotpDeviceNameMessage=Veuillez entrer le nom de votre appareil.
 notMatchPasswordMessage=Les mots de passe ne sont pas identiques.
+
+error-invalid-value=Valeur invalide.
+error-invalid-blank=Veuillez entrer une valeur.
+error-empty=Veuillez entrer une valeur.
+error-invalid-length=La longueur doit être entre {1} et {2}.
+error-invalid-length-too-short=La longueur minimale est {1}.
+error-invalid-length-too-long=La longueur maximale est {2}.
+error-invalid-email=Courriel invalide.
+error-invalid-number=Nombre invalide.
+error-number-out-of-range=Le nombre doit être entre {1} et {2}.
+error-number-out-of-range-too-small=Le nombre doit avoir une valeur minimale de {1}.
+error-number-out-of-range-too-big=Le nombre doit avoir une valeur maximale de {2}.
+error-pattern-no-match=Valeur invalide.
+error-invalid-uri=URL invalide.
+error-invalid-uri-scheme=Schéma d''URL invalide.
+error-invalid-uri-fragment=Fragment d''URL invalide.
+error-user-attribute-required=Veuillez renseigner ce champ.
+error-invalid-date=Date invalide.
+error-user-attribute-read-only=Ce champ est en lecture seule.
+error-username-invalid-character=La valeur contient des caractères invalides.
+error-person-name-invalid-character=La valeur contient des caractères invalides.
 
 invalidPasswordExistingMessage=Mot de passe existant invalide.
 invalidPasswordBlacklistedMessage=Mot de passe invalide : ce mot de passe est blacklisté.
@@ -177,12 +256,14 @@ federatedIdentityEmailExistsMessage=Cet utilisateur avec cette adresse e-mail ex
 confirmLinkIdpTitle=Ce compte existe déjà
 federatedIdentityConfirmLinkMessage=L''utilisateur {0} {1} existe déjà. Que souhaitez-vous faire ?
 federatedIdentityConfirmReauthenticateMessage=Identifiez vous afin de lier votre compte avec {0}
+nestedFirstBrokerFlowMessage=L''utilisateur {0} {1} n''est lié à aucun utilisateur connu.
 confirmLinkIdpReviewProfile=Vérifiez vos informations de profil
 confirmLinkIdpContinue=Souhaitez-vous lier {0} à votre compte existant
 
 configureTotpMessage=Vous devez configurer l''authentification par mobile pour activer votre compte.
 updateProfileMessage=Vous devez mettre à jour votre profil pour activer votre compte.
 updatePasswordMessage=Vous devez changer votre mot de passe pour activer votre compte.
+updateEmailMessage=Vous devez mettre à votre addresse e-mail pour activer votre compte.
 resetPasswordMessage=Vous devez changer votre mot de passe.
 verifyEmailMessage=Vous devez vérifier votre adresse e-mail pour activer votre compte.
 linkIdpMessage=Vous devez vérifier votre adresse e-mail pour lier votre compte avec {0}.
@@ -193,14 +274,21 @@ emailSendErrorMessage=<p style="color:red;">Erreur lors de l''envoi du courriel,
 accountUpdatedMessage=Votre compte a été mis à jour.
 accountPasswordUpdatedMessage=Votre mot de passe a été mis à jour.
 
+delegationCompleteHeader=Connexion réussie
+delegationCompleteMessage=Vous pouvez fermer cette fenêtre de navigateur et retourner sur votre application console.
+delegationFailedHeader=Connexion échouée
+delegationFailedMessage=Vous pouvez fermer cette fenêtre de navigateur et retourner sur votre application console, puis réessayer de vous connecter.
+
 noAccessMessage=Aucun accès
 
 invalidPasswordMinLengthMessage=Mot de passe invalide : longueur minimale requise de {0}.
+invalidPasswordMaxLengthMessage=Mot de passe invalide : longueur maximale de {0}.
 invalidPasswordMinDigitsMessage=Mot de passe invalide : doit contenir au moins {0} chiffre(s).
 invalidPasswordMinLowerCaseCharsMessage=Mot de passe invalide : doit contenir au moins {0} lettre(s) en minuscule.
 invalidPasswordMinUpperCaseCharsMessage=Mot de passe invalide : doit contenir au moins {0} lettre(s) en majuscule.
 invalidPasswordMinSpecialCharsMessage=Mot de passe invalide : doit contenir au moins {0} caractère(s) spéciaux.
 invalidPasswordNotUsernameMessage=Mot de passe invalide : ne doit pas être identique au nom d''utilisateur.
+invalidPasswordNotEmailMessage=Mot de passe invalide: ne doit pas être identique à l''adresse e-mail.
 invalidPasswordRegexPatternMessage=Mot de passe invalide : ne valide pas l''expression rationnelle.
 invalidPasswordHistoryMessage=Mot de passe invalide : ne doit pas être égal aux {0} derniers mots de passe.
 invalidPasswordGenericMessage=Mot de passe invalide : le nouveau mot de passe ne répond pas à la politique de mot de passe.
@@ -209,6 +297,7 @@ failedToProcessResponseMessage=Erreur lors du traitement de la réponse
 httpsRequiredMessage=Le protocole HTTPS est requis
 realmNotEnabledMessage=Le domaine n''est pas activé
 invalidRequestMessage=Requête invalide
+successLogout=Vous êtes déconnecté
 failedLogout=La déconnexion a échouée
 unknownLoginRequesterMessage=Compte inconnu du demandeur
 loginRequesterNotEnabledMessage=La connexion du demandeur n''est pas active
@@ -234,18 +323,21 @@ unexpectedErrorHandlingRequestMessage=Erreur inattendue lors du traitement de la
 invalidAccessCodeMessage=Code d''accès invalide.
 sessionNotActiveMessage=La session n''est pas active.
 invalidCodeMessage=Une erreur est survenue, veuillez vous reconnecter à votre application.
+cookieNotFoundMessage=Cookie introuvable. Assurez-vous que les cookies soient activés dans votre navigateur.
 identityProviderUnexpectedErrorMessage=Erreur inattendue lors de l''authentification avec fournisseur d''identité.
+identityProviderMissingStateMessage=Paramètre d''état manquant dans la réponse du fournisseur d''identité.
 identityProviderNotFoundMessage=Impossible de trouver le fournisseur d''identité avec cet identifiant.
 identityProviderLinkSuccess=Votre compte a été correctement lié avec {0} compte {1} .
 staleCodeMessage=Cette page n''est plus valide, merci de retourner à votre application et de vous connecter à nouveau.
 realmSupportsNoCredentialsMessage=Ce domaine ne supporte aucun type d''accréditation.
+credentialSetupRequired=Connexion impossible, configuration d''accréditation requise.
 identityProviderNotUniqueMessage=Ce domaine autorise plusieurs fournisseurs d''identité. Impossible de déterminer le fournisseur d''identité avec lequel s''authentifier.
 emailVerifiedMessage=Votre adresse e-mail a été vérifiée.
 
 staleEmailVerificationLink=Le lien que vous avez cliqué est périmé et n''est plus valide. Peut-être avez vous déjà vérifié votre mot de passe ?
 identityProviderAlreadyLinkedMessage=L''identité fédérée retournée par {0} est déjà liée à un autre utilisateur.
 confirmAccountLinking=Confirmez la liaison du compte {0} du fournisseur d''entité {1} avec votre compte.
-confirmEmailAddressVerification=Confirmez la validité de l''adresse e-mail {0}.
+confirmEmailAddressVerification=Confirmez la validité de l''adresse courriel {0}.
 confirmExecutionOfActions=Suivez les instructions suivantes
 
 
@@ -257,6 +349,7 @@ invalidParameterMessage=Paramètre invalide \: {0}
 alreadyLoggedIn=Vous êtes déjà connecté.
 
 differentUserAuthenticated=Vous êtes déjà authentifié avec un autre utilisateur ''{0}'' dans cette session. Merci de vous déconnecter.
+brokerLinkingSessionExpired=La liaison entre comptes broker a été demandée, mais la session n''est plus valide.
 proceedWithAction=&raquo; Cliquez ici
 
 
@@ -274,3 +367,40 @@ noCertificate=[Pas de certificat]
 
 pageNotFound=Page non trouvée
 internalServerError=Une erreur interne du serveur s''est produite
+
+# Identity provider
+identity-provider-redirector=Connexion avec un autre fournisseur d''identité
+identity-provider-login-label=Ou se connecter avec
+idp-email-verification-display-name=Vérification de l''adresse e-mail
+idp-email-verification-help-text=Lier votre compte en validant votre adresse e-mail.
+idp-username-password-form-display-name=Nom d''utilisateur et mot de passe
+idp-username-password-form-help-text=Lier votre compte en vous connectant.
+
+console-username=Nom d''utilisateur:
+console-password=Mot de passe:
+console-otp=Code à usage unique:
+console-new-password=Nouveau mot de passe:
+console-confirm-password=Confirmez les mot de passe:
+console-update-password=La mise à jour de votre mot de passe est requise.
+console-verify-email=Vous devez vérifier votre adresse e-mail. Nous avons envoyé un courriel à {0} contenant un code de vérification. Veuillez saisir ce code ci-dessous.
+console-email-code=Code courriel:
+console-accept-terms=Accepter les conditions? [o/n]:
+console-accept=o
+
+finalDeletionConfirmation=Si vous supprimez votre compte, il ne pourra pas être restauré. Pour conserver votre compte, cliquez sur Annuler.
+irreversibleAction=Cette action est irréversible
+deleteAccountConfirm=Confirmation de suppression de compte
+
+deletingImplies=Supprimer votre compte implique:
+errasingData=Supprimer toutes vos données
+loggingOutImmediately=Vous déconnecter immédiatement
+accountUnusable=Toute utilisation future de l''application sera impossible avec ce compte
+userDeletedSuccessfully=Utilisateur supprimé avec succès
+
+access-denied=Accès refusé
+
+frontchannel-logout.title=Déconnexion
+frontchannel-logout.message=Vous êtes déconnecté des applications suivantes
+logoutConfirmTitle=Déconnexion
+logoutConfirmHeader=Êtes-vous sûr de vouloir vous déconnecter ?
+doLogout=Se déconnecter
