fix: Template Redesign review

--- a/themes/inclusion-connect/login/messages/messages_fr.properties
+++ b/themes/inclusion-connect/login/messages/messages_fr.properties
@@ -1,6 +1,6 @@
 # encoding: UTF-8
 doLogIn=Connexion
-doRegister=Activer mon compte
+doRegister=Créer mon compte
 doCancel=Annuler
 doSubmit=Soumettre
 doBack=Retour
@@ -47,8 +47,8 @@ errorTitleHtml=Nous sommes <strong>désolés</strong>...
 emailVerifyTitle=Vérification de l''adresse e-mail
 emailForgotTitle=Mot de passe oublié ?
 updateEmailTitle=Mise à jour de l''adresse e-mail
-emailUpdateConfirmationSentTitle=Courriel de confirmation envoyé
-emailUpdateConfirmationSent=Un courriel de confirmation a été envoyé à {0}. Vous devez suivre les instructions de ce dernier afin de compléter la mise à jour.
+emailUpdateConfirmationSentTitle=E-mail de confirmation envoyé
+emailUpdateConfirmationSent=Un e-mail de confirmation a été envoyé à {0}. Vous devez suivre les instructions de ce dernier afin de compléter la mise à jour.
 emailUpdatedTitle=Adresse e-mail mise à jour
 emailUpdated=La mise à jour de votre adresse e-mail vers {0} a été complétée avec succès.
 updatePasswordTitle=Mise à jour du mot de passe
@@ -147,21 +147,21 @@ oauth2DeviceVerificationFailedMessage=Vous pouvez fermer cette fenêtre de navig
 oauth2DeviceConsentDeniedMessage=Consentement refusé pour connecter l''appareil.
 oauth2DeviceAuthorizationGrantDisabledMessage=Le client n''est pas autorisé à initier OAuth 2.0 Device Authorization Grant. Le flux est désactivé pour ce client.
 
-emailVerifyInstruction1=Un courriel avec des instructions à suivre vous a été envoyé.
-emailVerifyInstruction2=Vous n''avez pas reçu de courriel pour activer votre compte ?
-emailVerifyInstruction3=pour renvoyer le courriel.
+emailVerifyInstruction1=Un e-mail avec des instructions à suivre vous a été envoyé.
+emailVerifyInstruction2=Vous n''avez pas reçu d''e-mail pour activer votre compte ?
+emailVerifyInstruction3=pour renvoyer l''e-mail.
 
 emailLinkIdpTitle=Association avec {0}
-emailLinkIdp1=Un courriel avec des instructions pour associer le compte {1} sur {0} avec votre compte {2} vous a été envoyé.
-emailLinkIdp2=Vous n''avez pas reçu de code dans le courriel ?
-emailLinkIdp3=pour renvoyer le courriel.
-emailLinkIdp4=Si vous avez déjà vérifié votre courriel dans un autre navigateur
+emailLinkIdp1=Un e-mail avec des instructions pour associer le compte {1} sur {0} avec votre compte {2} vous a été envoyé.
+emailLinkIdp2=Vous n''avez pas reçu de code dans l''e-mail ?
+emailLinkIdp3=pour renvoyer l''e-mail.
+emailLinkIdp4=Si vous avez déjà vérifié votre e-mail dans un autre navigateur
 emailLinkIdp5=pour continuer.
 
 backToLogin=Retour à la connexion
 
-emailInstruction=Entrez votre nom d''utilisateur ou votre courriel ; un courriel va vous être envoyé vous permettant de créer un nouveau mot de passe.
-emailInstructionUsername=Entrez votre nom d''utilisateur ; un courriel va vous être envoyé vous permettant de créer un nouveau mot de passe.
+emailInstruction=Entrez votre nom d''utilisateur ou votre adresse e-mail ; un e-mail va vous être envoyé vous permettant de créer un nouveau mot de passe.
+emailInstructionUsername=Entrez votre nom d''utilisateur ; un e-mail va vous être envoyé vous permettant de créer un nouveau mot de passe.
 
 copyCodeInstruction=Copiez le code et recopiez le dans votre application :
 
@@ -200,7 +200,7 @@ client_broker=Broker
 
 requiredFields=Champs requis
 
-invalidUserMessage=<p>Adresse e-mail ou mot de passe invalide.<br>Si vous n''avez pas encore créé votre compte Inclusion Connect, rendez-vous en bas de page et cliquez sur créer un compte.</p>
+invalidUserMessage=<p>Adresse e-mail ou mot de passe invalide.<br>Si vous n''avez pas encore créé votre compte Inclusion Connect, rendez-vous en bas de page et cliquez sur créer mon compte.</p>
 invalidUsernameMessage=Nom d''utilisateur invalide.
 invalidUsernameOrEmailMessage=Nom d''utilisateur ou adresse e-mail invalide.
 invalidPasswordMessage=Mot de passe invalide.
@@ -227,7 +227,7 @@ error-empty=Veuillez entrer une valeur.
 error-invalid-length=La longueur doit être entre {1} et {2}.
 error-invalid-length-too-short=La longueur minimale est {1}.
 error-invalid-length-too-long=La longueur maximale est {2}.
-error-invalid-email=Courriel invalide.
+error-invalid-email=adresse e-mail invalide.
 error-invalid-number=Nombre invalide.
 error-number-out-of-range=Le nombre doit être entre {1} et {2}.
 error-number-out-of-range-too-small=Le nombre doit avoir une valeur minimale de {1}.
@@ -268,8 +268,8 @@ resetPasswordMessage=Vous devez changer votre mot de passe.
 verifyEmailMessage=Vous devez vérifier votre adresse e-mail pour activer votre compte.
 linkIdpMessage=Vous devez vérifier votre adresse e-mail pour lier votre compte avec {0}.
 
-emailSentMessage=Si un compte existe avec cette adresse e-mail, vous recevrez un email contenant des instructions pour réinitialiser votre mot de passe.
-emailSendErrorMessage=<p style="color:red;">Erreur lors de l''envoi du courriel, veuillez essayer plus tard.</p>
+emailSentMessage=Si un compte existe avec cette adresse e-mail, vous recevrez un e-mail contenant des instructions pour réinitialiser votre mot de passe.
+emailSendErrorMessage=<p style="color:red;">Erreur lors de l''envoi du e-mail, veuillez essayer plus tard.</p>
 
 accountUpdatedMessage=Votre compte a été mis à jour.
 accountPasswordUpdatedMessage=Votre mot de passe a été mis à jour.
@@ -337,7 +337,7 @@ emailVerifiedMessage=Votre adresse e-mail a été vérifiée.
 staleEmailVerificationLink=Le lien que vous avez cliqué est périmé et n''est plus valide. Peut-être avez vous déjà vérifié votre mot de passe ?
 identityProviderAlreadyLinkedMessage=L''identité fédérée retournée par {0} est déjà liée à un autre utilisateur.
 confirmAccountLinking=Confirmez la liaison du compte {0} du fournisseur d''entité {1} avec votre compte.
-confirmEmailAddressVerification=Confirmez la validité de l''adresse courriel {0}.
+confirmEmailAddressVerification=Confirmez la validité de l''adresse a-mail {0}.
 confirmExecutionOfActions=Suivez les instructions suivantes
 
 
@@ -382,8 +382,8 @@ console-otp=Code à usage unique:
 console-new-password=Nouveau mot de passe:
 console-confirm-password=Confirmez les mot de passe:
 console-update-password=La mise à jour de votre mot de passe est requise.
-console-verify-email=Vous devez vérifier votre adresse e-mail. Nous avons envoyé un courriel à {0} contenant un code de vérification. Veuillez saisir ce code ci-dessous.
-console-email-code=Code courriel:
+console-verify-email=Vous devez vérifier votre adresse e-mail. Nous avons envoyé un e-mail à {0} contenant un code de vérification. Veuillez saisir ce code ci-dessous.
+console-email-code=Code e-mail:
 console-accept-terms=Accepter les conditions? [o/n]:
 console-accept=o
 
