feat: Add terms template and in footer

--- a/themes/inclusion-connect/login/messages/messages_fr.properties
+++ b/themes/inclusion-connect/login/messages/messages_fr.properties
@@ -60,8 +60,8 @@ browserContinue=Navigateur requis pour continuer la connexion
 browserContinuePrompt=Ouvrir le navigateur et continuer la connexion? [y/n]:
 browserContinueAnswer=y
 
-termsTitle=Termes et Conditions
-termsTitleHtml=Termes et Conditions
+termsTitle=Conditions d’utilisation et confidentialité
+termsTitleHtml=Conditions d’utilisation et confidentialité
 termsText=<p>Termes et conditions à définir</p>
 termsPlainText=Termes et conditions à définir
 
