--- a/themes/inclusion-connect/email/messages/messages_fr.properties
+++ b/themes/inclusion-connect/email/messages/messages_fr.properties
@@ -1,30 +1,30 @@
 # encoding: UTF-8
-emailVerificationSubject=Vérification de l''adresse e-mail
-emailVerificationBody=Une demande de création de compte a été effectuée avec votre adresse e-mail. Si vous êtes à l''origine de cette requête, veuillez cliquer sur le lien ci-dessous afin de vérifier votre adresse e-mail \n\n{0}\n\nCe lien expire dans {3}.\n\nSinon, veuillez ignorer ce message.
-emailVerificationBodyHtml=<p>Une demande de création de compte a été effectuée avec votre adresse e-mail. Si vous êtes à l''origine de cette requête, veuillez cliquer sur le lien ci-dessous afin de vérifier votre adresse e-mail. Ce lien est valable {3}.</p><div style="border-radius: 5px; background: rgb(231, 243, 248); padding: 10px 10px 10px 10px;"><p>Attention, pour finaliser correctement la création de votre compte, vous devez ouvrir ce lien dans le même navigateur web (ex : Chrome, Edge, Firefox) que celui utilisé pour initier la demande. En cas de doute, copiez-coller directement ce lien dans l’onglet ouvert pour démarrer l’inscription.</p></div><p><a href="{0}" rel="notrack">Lien pour vérifier votre adresse e-mail</a></p><p>Si vous n’êtes pas à l’origine de cette demande, veuillez ignorer ce message.</p>
+emailVerificationSubject=Vérification de l’adresse e-mail
+emailVerificationBody=Une demande de création de compte a été effectuée avec votre adresse e-mail. Si vous êtes à l’origine de cette requête, veuillez cliquer sur le lien ci-dessous afin de vérifier votre adresse e-mail \n\n{0}\n\nCe lien expire dans {3}.\n\nSinon, veuillez ignorer ce message.
+emailVerificationBodyHtml=<p>Une demande de création de compte a été effectuée avec votre adresse e-mail. Si vous êtes à l’origine de cette requête, veuillez cliquer sur le lien ci-dessous afin de vérifier votre adresse e-mail. Ce lien est valable {3}.</p><div style="border-radius: 5px; background: rgb(231, 243, 248); padding: 10px 10px 10px 10px;"><p>Attention, pour finaliser correctement la création de votre compte, vous devez ouvrir ce lien dans le même navigateur web (ex : Chrome, Edge, Firefox) que celui utilisé pour initier la demande. En cas de doute, copiez-coller directement ce lien dans l’onglet ouvert pour démarrer l’inscription.</p></div><p><a href="{0}" rel="notrack">Lien pour vérifier votre adresse e-mail</a></p><p>Si vous n’êtes pas à l’origine de cette demande, veuillez ignorer ce message.</p>
 passwordResetSubject=Réinitialiser le mot de passe
-passwordResetBody=Une demande de réinitialisation de mot de passe a été effectuée pour votre compte. Si vous êtes à l''origine de cette requête, veuillez cliquer sur le lien ci-dessous pour le mettre à jour.\n\n{0}\n\nCe lien expire dans {3}.\n\nSinon, veuillez ignorer ce message ; aucun changement ne sera effectué sur votre compte.
-passwordResetBodyHtml=<p>Une demande de réinitialisation de mot de passe a été effectuée pour votre compte. Si vous êtes à l''origine de cette requête, veuillez cliquer sur le lien ci-dessous pour le mettre à jour.</p><p><a href="{0}" rel="notrack">Lien pour réinitialiser votre mot de passe</a></p><p>Ce lien expire dans {3}.</p><p>Sinon, veuillez ignorer ce message ; aucun changement ne sera effectué sur votre compte.</p>
+passwordResetBody=Une demande de réinitialisation de mot de passe a été effectuée pour votre compte. Si vous êtes à l’origine de cette requête, veuillez cliquer sur le lien ci-dessous pour le mettre à jour.\n\n{0}\n\nCe lien expire dans {3}.\n\nSinon, veuillez ignorer ce message ; aucun changement ne sera effectué sur votre compte.
+passwordResetBodyHtml=<p>Une demande de réinitialisation de mot de passe a été effectuée pour votre compte. Si vous êtes à l’origine de cette requête, veuillez cliquer sur le lien ci-dessous pour le mettre à jour.</p><p><a href="{0}" rel="notrack">Lien pour réinitialiser votre mot de passe</a></p><p>Ce lien expire dans {3}.</p><p>Sinon, veuillez ignorer ce message ; aucun changement ne sera effectué sur votre compte.</p>
 executeActionsSubject=Mettre à jour votre compte
-executeActionsBody=Votre administrateur vient de demander une mise à jour de votre compte. Veuillez cliquer sur le lien ci-dessous afin de commencer le processus.\n\n{0}\n\nCe lien expire dans {4}.\n\nSi vous n''êtes pas à l''origine de cette requête, veuillez ignorer ce message ; aucun changement ne sera effectué sur votre compte.
-executeActionsBodyHtml=<p>Votre administrateur vient de demander une mise à jour de votre compte. Veuillez cliquer sur le lien ci-dessous afin de commencer le processus.</p><p><a href="{0}" rel="notrack">Lien pour mettre à jour votre compte.</a></p><p>Ce lien expire dans {4}.</p><p>Si vous n''êtes pas à l''origine de cette requête, veuillez ignorer ce message ; aucun changement ne sera effectué sur votre compte.</p>
+executeActionsBody=Votre administrateur vient de demander une mise à jour de votre compte. Veuillez cliquer sur le lien ci-dessous afin de commencer le processus.\n\n{0}\n\nCe lien expire dans {4}.\n\nSi vous n’êtes pas à l’origine de cette requête, veuillez ignorer ce message ; aucun changement ne sera effectué sur votre compte.
+executeActionsBodyHtml=<p>Votre administrateur vient de demander une mise à jour de votre compte. Veuillez cliquer sur le lien ci-dessous afin de commencer le processus.</p><p><a href="{0}" rel="notrack">Lien pour mettre à jour votre compte.</a></p><p>Ce lien expire dans {4}.</p><p>Si vous n’êtes pas à l’origine de cette requête, veuillez ignorer ce message ; aucun changement ne sera effectué sur votre compte.</p>
 eventLoginErrorSubject=Erreur de connexion
-eventLoginErrorBody=Une tentative de connexion a été détectée sur votre compte depuis {1}. Si vous n''êtes pas à l''origine de cette requête, veuillez contacter votre administrateur.
-eventLoginErrorBodyHtml=<p>Une tentative de connexion a été détectée sur votre compte depuis {1}. Si vous n''êtes pas à l''origine de cette requête, veuillez contacter votre administrateur.</p>
+eventLoginErrorBody=Une tentative de connexion a été détectée sur votre compte depuis {1}. Si vous n’êtes pas à l’origine de cette requête, veuillez contacter votre administrateur.
+eventLoginErrorBodyHtml=<p>Une tentative de connexion a été détectée sur votre compte depuis {1}. Si vous n’êtes pas à l’origine de cette requête, veuillez contacter votre administrateur.</p>
 eventRemoveTotpSubject=Suppression du OTP
-eventRemoveTotpBody=Le OTP a été supprimé de votre compte depuis {1}. Si vous n''étiez pas à l''origine de cette requête, veuillez contacter votre administrateur.
-eventRemoveTotpBodyHtml=<p>Le OTP a été supprimé de votre compte depuis {1}. Si vous n''étiez pas à l''origine de cette requête, veuillez contacter votre administrateur.</p>
+eventRemoveTotpBody=Le OTP a été supprimé de votre compte depuis {1}. Si vous n’étiez pas à l’origine de cette requête, veuillez contacter votre administrateur.
+eventRemoveTotpBodyHtml=<p>Le OTP a été supprimé de votre compte depuis {1}. Si vous n’étiez pas à l’origine de cette requête, veuillez contacter votre administrateur.</p>
 eventUpdatePasswordSubject=Mise à jour du mot de passe
-eventUpdatePasswordBody=Votre mot de passe pour votre compte a été modifié depuis {1}. Si vous n''étiez pas à l''origine de cette requête, veuillez contacter votre administrateur.
-eventUpdatePasswordBodyHtml=<p>Votre mot de passe pour votre compte a été modifié depuis {1}. Si vous n''étiez pas à l''origine de cette requête, veuillez contacter votre administrateur.</p>
+eventUpdatePasswordBody=Votre mot de passe pour votre compte a été modifié depuis {1}. Si vous n’étiez pas à l’origine de cette requête, veuillez contacter votre administrateur.
+eventUpdatePasswordBodyHtml=<p>Votre mot de passe pour votre compte a été modifié depuis {1}. Si vous n’étiez pas à l’origine de cette requête, veuillez contacter votre administrateur.</p>
 eventUpdateTotpSubject=Mise à jour du OTP
-eventUpdateTotpBody=Le OTP a été mis à jour pour votre compte depuis {1}. Si vous n''étiez pas à l''origine de cette requête, veuillez contacter votre administrateur.
-eventUpdateTotpBodyHtml=<p>Le OTP a été mis à jour pour votre compte depuis {1}. Si vous n''étiez pas à l''origine de cette requête, veuillez contacter votre administrateur.</p>
+eventUpdateTotpBody=Le OTP a été mis à jour pour votre compte depuis {1}. Si vous n’étiez pas à l’origine de cette requête, veuillez contacter votre administrateur.
+eventUpdateTotpBodyHtml=<p>Le OTP a été mis à jour pour votre compte depuis {1}. Si vous n’étiez pas à l’origine de cette requête, veuillez contacter votre administrateur.</p>
 
 greeting=Bonjour,\n\n
 greetingHtml=<p>Bonjour,</p>
-closing=L''équipe d''inclusion connect
-closingHtml=<p>L''équipe d''inclusion connect</p>
+closing=L’équipe d’inclusion connect
+closingHtml=<p>L’équipe d’inclusion connect</p>
 
 linkExpirationFormatter.timePeriodUnit.seconds=secondes
 linkExpirationFormatter.timePeriodUnit.seconds.1=seconde
