--- a/themes/inclusion-connect/account/messages/messages_fr.properties
+++ b/themes/inclusion-connect/account/messages/messages_fr.properties
@@ -130,7 +130,7 @@ invalidPasswordConfirmMessage=Le mot de passe de confirmation ne correspond pas.
 invalidTotpMessage=Le code d’authentification est invalide.
 
 usernameExistsMessage=Le nom d’utilisateur existe déjà.
-emailExistsMessage=L’adresse e-mail existe déjà.
+emailExistsMessage=Cette adresse e-mail existe déjà sur Inclusion Connect, vous ne pouvez pas l’utiliser.
 
 readOnlyUserMessage=Vous ne pouvez pas mettre à jour votre compte car il est en lecture seule.
 readOnlyPasswordMessage=Vous ne pouvez pas mettre à jour votre mot de passe car votre compte est en lecture seule.
