theme: Remove mention to username in reset password page

--- a/themes/inclusion-connect/login/messages/messages_fr.properties
+++ b/themes/inclusion-connect/login/messages/messages_fr.properties
@@ -160,7 +160,7 @@ emailLinkIdp5=pour continuer.
 
 backToLogin=Retour à la connexion
 
-emailInstruction=Entrez votre nom d’utilisateur ou votre adresse e-mail ; un e-mail va vous être envoyé vous permettant de créer un nouveau mot de passe.
+emailInstruction=Entrez l’adresse e-mail de votre compte Inclusion Connect ; un e-mail va vous être envoyé vous permettant de créer un nouveau mot de passe.
 emailInstructionUsername=Entrez votre nom d’utilisateur ; un e-mail va vous être envoyé vous permettant de créer un nouveau mot de passe.
 
 copyCodeInstruction=Copiez le code et recopiez le dans votre application :
