--- a/themes/inclusion-connect/login/messages/messages_fr.properties
+++ b/themes/inclusion-connect/login/messages/messages_fr.properties
@@ -248,7 +248,7 @@ invalidPasswordConfirmMessage=Le mot de passe de confirmation ne correspond pas.
 invalidTotpMessage=Le code d’authentification est invalide.
 
 usernameExistsMessage=Le nom d’utilisateur existe déjà.
-emailExistsMessage=L’adresse e-mail existe déjà.
+emailExistsMessage=Un compte avec cette adresse e-mail existe déjà, veuillez utiliser le lien "Connectez-vous" en bas de page.
 
 federatedIdentityExistsMessage=L’utilisateur avec {0} {1} existe déjà. Veuillez accéder à au gestionnaire de compte pour lier le compte.
 federatedIdentityEmailExistsMessage=Cet utilisateur avec cette adresse e-mail existe déjà. Veuillez vous connecter au gestionnaire de compte pour lier le compte.
